fixing the flexbox, using flex-wrap

--- a/style.css
+++ b/style.css
@@ -38,14 +38,16 @@ input {
 }
 
 .container {
+  border: solid 1px #800080;
   display: flex;
-  flex-wrap:wrap;
-  align-items: center;
-  justify-content: center;
 }
 
+.wrap {
+	flex-wrap: wrap;
+}
 
 .card {
+  flex: 1;
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
